# vireqx

./: CMakeLists.txt  COPYING  INSTALL  Makefile  README  aliases.lst  file_id.diz  vimkidx.c  vipath.idx  vireq.c  vireq.cfg  vireq.dok  vireq.h  vireq.pwd  whatsnew
doc/: CMakeLists.txt  TODO  file_id.diz  vimkidx.1  vireq.1  vireq.cfg  vireq.dok  vireq.pwd
