# ########## doc directory ##########

# add install targets:
INSTALL(FILES vimkidx.1 DESTINATION /opt/share/man/man1)
INSTALL(FILES vireq.1 DESTINATION /opt/share/man/man1)

INSTALL(FILES TODO DESTINATION /opt/vireqx/doc)
INSTALL(FILES vireq.dok DESTINATION /opt/vireqx/doc)
INSTALL(FILES vireq.cfg DESTINATION /opt/vireqx)
INSTALL(FILES vireq.pwd DESTINATION /opt/vireqx)
